# xfce-polkit

./: .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac  meson.build  xfce-polkit.desktop.in
src/: .gitignore  Makefile.am  xfce-polkit-listener.c  xfce-polkit-listener.h  xfce-polkit.c
